<resources>
    <string name="app_name">OCCS</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="demand_btn_txt">发布需求</string>
    <string name="register_btn_txt">立即注册</string>
    <string name="logoin_btn_txt">登录</string>
    <string name="register_com_btn">注册企业用户</string>
    <string name="register_soft_btn">注册软件公司</string>
    <string name="register_person_btn">注册个人用户</string>
    <string name="register_type_title">请选择注册的会员类型</string>
    <string name="register_submit_txt">注 册</string>
    <string name="register_input_hint_username">请设置用户名</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="drawer_logoout">退出登录</string>
    <string name="contract_title">OCCS网服务协议（试行)</string>
    <string name="date_picker_title">请选择生日</string>
    <string name="select_picture">Select Picture</string>
    <string name="msg_failed_to_get_picture">未找到图像</string>
    <string name="cell_message">%1$s</string>
    <string name="soft_updating">下  载</string>
    <string name="soft_update_cancel">取消下载</string>
</resources>
